--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,4 @@ reads: "reads_15_15000"   # name of reads, located in daata/reads/
 redundans_path: "/home/mike/redundans"  # path to directory containing redundans script
 picard-tools: "/home/"  # path to picarad-tools
 memory: "4"  # the aavailaable memory for the analysis in gigabytes
+threads: "2"
