--- a/envs/v_calling.yaml
+++ b/envs/v_calling.yaml
@@ -1,7 +1,129 @@
 name: v_calling
 channels:
-  - defaults
   - bioconda
+  - defaults
 dependencies:
-  - bcftools
-  - gatk
+  - _libgcc_mutex=0.1=main
+  - _r-mutex=1.0.0=anacondar_1
+  - bcftools=1.9=ha228f0b_4
+  - binutils_impl_linux-64=2.33.1=he6710b0_7
+  - binutils_linux-64=2.33.1=h9595d00_15
+  - bwidget=1.9.11=1
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2021.5.25=h06a4308_1
+  - cairo=1.16.0=hf32fb01_1
+  - certifi=2021.5.30=py39h06a4308_0
+  - curl=7.69.1=hbc83047_0
+  - fontconfig=2.13.1=h6c09931_0
+  - freetype=2.10.4=h5ab3b9f_0
+  - fribidi=1.0.10=h7b6447c_0
+  - gatk=3.8=hdfd78af_11
+  - gcc_impl_linux-64=7.3.0=habb00fd_1
+  - gcc_linux-64=7.3.0=h553295d_15
+  - gfortran_impl_linux-64=7.3.0=hdf63c60_1
+  - gfortran_linux-64=7.3.0=h553295d_15
+  - glib=2.68.2=h36276a3_0
+  - graphite2=1.3.14=h23475e2_0
+  - gsl=2.4=h14c3975_4
+  - gxx_impl_linux-64=7.3.0=hdf63c60_1
+  - gxx_linux-64=7.3.0=h553295d_15
+  - harfbuzz=2.8.1=h6f93f22_0
+  - icu=58.2=he6710b0_3
+  - jpeg=9b=h024ee3a_2
+  - krb5=1.17.1=h173b8e3_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libcurl=7.69.1=h20c2e04_0
+  - libdeflate=1.0=h14c3975_1
+  - libedit=3.1.20210216=h27cfd23_1
+  - libffi=3.3=he6710b0_2
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
+  - libssh2=1.9.0=h1ba5d50_1
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.2.0=h85742a9_0
+  - libuuid=1.0.3=h1bed415_2
+  - libwebp-base=1.2.0=h27cfd23_0
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.10=hb55368b_3
+  - lz4-c=1.9.3=h2531618_0
+  - make=4.2.1=h1bed415_1
+  - ncurses=6.2=he6710b0_1
+  - openjdk=8.0.152=h7b6447c_3
+  - openssl=1.1.1k=h27cfd23_0
+  - pango=1.45.3=hd140c19_0
+  - pcre=8.44=he6710b0_0
+  - pip=21.1.1=py39h06a4308_0
+  - pixman=0.40.0=h7b6447c_0
+  - python=3.9.5=hdb3f193_3
+  - r-assertthat=0.2.1=r36h6115d3f_0
+  - r-base=3.6.1=haffb61f_2
+  - r-bitops=1.0_6=r36h96ca727_4
+  - r-catools=1.17.1.2=r36h29659fb_0
+  - r-cli=1.1.0=r36h6115d3f_0
+  - r-colorspace=1.4_1=r36h96ca727_0
+  - r-crayon=1.3.4=r36h6115d3f_0
+  - r-dichromat=2.0_0=r36h6115d3f_4
+  - r-digest=0.6.18=r36h96ca727_0
+  - r-fansi=0.4.0=r36h96ca727_0
+  - r-gdata=2.18.0=r36h6115d3f_0
+  - r-ggplot2=3.1.1=r36h6115d3f_0
+  - r-glue=1.3.1=r36h96ca727_0
+  - r-gplots=3.0.1.1=r36h6115d3f_0
+  - r-gsalib=2.1=r36h6115d3f_0
+  - r-gtable=0.3.0=r36h6115d3f_0
+  - r-gtools=3.8.1=r36h96ca727_0
+  - r-kernsmooth=2.23_15=r36ha65eedd_4
+  - r-labeling=0.3=r36h6115d3f_4
+  - r-lattice=0.20_38=r36h96ca727_0
+  - r-lazyeval=0.2.2=r36h96ca727_0
+  - r-magrittr=1.5=r36h6115d3f_4
+  - r-mass=7.3_51.3=r36h96ca727_0
+  - r-matrix=1.2_17=r36h96ca727_0
+  - r-mgcv=1.8_28=r36h96ca727_0
+  - r-munsell=0.5.0=r36h6115d3f_0
+  - r-nlme=3.1_139=r36ha65eedd_0
+  - r-pillar=1.3.1=r36h6115d3f_0
+  - r-pkgconfig=2.0.2=r36h6115d3f_0
+  - r-plyr=1.8.4=r36h29659fb_0
+  - r-r6=2.4.0=r36h6115d3f_0
+  - r-rcolorbrewer=1.1_2=r36h6115d3f_0
+  - r-rcpp=1.0.1=r36h29659fb_0
+  - r-reshape=0.8.8=r36h6115d3f_0
+  - r-reshape2=1.4.3=r36h29659fb_0
+  - r-rlang=0.3.4=r36h96ca727_0
+  - r-scales=1.0.0=r36h29659fb_0
+  - r-stringi=1.4.3=r36h29659fb_0
+  - r-stringr=1.4.0=r36h6115d3f_0
+  - r-tibble=2.1.1=r36h96ca727_0
+  - r-utf8=1.1.4=r36h96ca727_0
+  - r-viridislite=0.3.0=r36h6115d3f_0
+  - r-withr=2.1.2=r36h6115d3f_0
+  - readline=8.1=h27cfd23_0
+  - setuptools=52.0.0=py39h06a4308_0
+  - sqlite=3.35.4=hdfb4753_0
+  - tk=8.6.10=hbc83047_0
+  - tktable=2.10=h14c3975_0
+  - tzdata=2020f=h52ac0ba_0
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - xz=5.2.5=h7b6447c_0
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.9=haebb681_0
+  - pip:
+    - chardet==4.0.0
+    - cycler==0.10.0
+    - dotplot==0.4.5
+    - idna==2.10
+    - kiwisolver==1.3.1
+    - matplotlib==3.4.2
+    - numpy==1.20.3
+    - pillow==8.2.0
+    - pyparsing==2.4.7
+    - pyqt5==5.15.4
+    - pyqt5-qt5==5.15.2
+    - pyqt5-sip==12.9.0
+    - python-dateutil==2.8.1
+    - requests==2.25.1
+    - six==1.16.0
+    - urllib3==1.26.5
+prefix: /home/mike/miniconda3/envs/v_calling
