--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 assembly: "concat_mrl20k_q15l15k_pepper"  # name of starting assembly, located in data/aassemblies/
-reads: "reads_15_15000"   # name of reads, located in daata/reads/
-redundans_path: "/home/mike/redundans"  # path to directory containing redundans script
+reads: "reads_15_15000"   # name of reads, located in data/reads/
+redundans_path: "/home/mike/software/redundans"  # path to directory containing redundans script
 picard-tools: "/home/"  # path to picarad-tools
-memory: "4"  # the aavailaable memory for the analysis in gigabytes
-threads: "2"
+memory: "56"  # the aavailaable memory for the analysis in gigabytes
+threads: "12"
+quast_path: "/home/mike/software/quast"
