Blast working better - outputting two ttop hit seqs of fair quality but questionable length. GATK and bcftools still not working

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ assembly: "concat_mrl20k_q15l15k_pepper"  # name of starting assembly, located i
 reads: "reads_15_15000"   # name of reads, located in data/reads/
 redundans_path: "/home/mike/software/redundans"  # path to directory containing redundans script
 picard-tools: "/home/"  # path to picarad-tools
-memory: "56"  # the aavailaable memory for the analysis in gigabytes
+memory: "8"  # the aavailaable memory for the analysis in gigabytes
 threads: "12"
 quast_path: "/home/mike/software/quast"
+seq_tech: "nanopore"
