--- a/envs/v_calling.yaml
+++ b/envs/v_calling.yaml
@@ -100,6 +100,7 @@ dependencies:
   - r-viridislite=0.3.0=r36h6115d3f_0
   - r-withr=2.1.2=r36h6115d3f_0
   - readline=8.1=h27cfd23_0
+  - samtools
   - setuptools=52.0.0=py39h06a4308_0
   - sqlite=3.35.4=hdfb4753_0
   - tk=8.6.10=hbc83047_0
