--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,10 @@
-full_path: "/media/mike/WD_4TB/karyon_longread/"
-assembly: "VW4_HiFiasm.2.asm.hic.hap1and2.p_ctg"  # name of starting assembly, located in data/aassemblies/
+full_path: "/home/531734/karyon_longread/"
+assembly: "VW4_CANU_HiFi"  # name of starting assembly, located in data/aassemblies/
 reads: "VW4_CANU_HiFi.trimmedReads"   # name of reads, located in data/reads/
-redundans_path: "/home/software/redundans"  # path to directory containing redundans script
-picard-tools: "/home/software"  # path to picarad-tools
-memory: "60"  # the aavailaable memory for the analysis in gigabytes
-threads: "12"
-quast_path: "/home/software/quast"
+redundans_path: "/home/531734/packages/redundans"  # path to directory containing redundans script
+picard-tools: "/home/"  # path to picarad-tools
+memory: "120"  # the aavailaable memory for the analysis in gigabytes
+threads: "28"
+quast_path: "/home/531734/packages/quast"
 seq_tech: "hifi"
 reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
