--- a/envs/karyonplot.yaml
+++ b/envs/karyonplot.yaml
@@ -1,8 +1,8 @@
 name: karyonplot
 channels:
+  - defaults
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
@@ -20,9 +20,9 @@ dependencies:
   - boost-cpp=1.76.0=h312852a_1
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.17.2=h7f98852_0
-  - ca-certificates=2021.5.30=ha878542_0
+  - ca-certificates=2021.10.26=h06a4308_2
   - cairo=1.16.0=h6cf1ce9_1008
-  - certifi=2021.5.30=py39hf3d152e_0
+  - certifi=2021.10.8=py39h06a4308_0
   - cffi=1.14.6=py39he32792d_0
   - chrpath=0.16=h7f98852_1002
   - curl=7.78.0=hea6ffbf_0
@@ -139,7 +139,7 @@ dependencies:
   - numpy=1.21.1=py39hdbf815f_0
   - olefile=0.46=pyh9f0ad1d_1
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1k=h7f98852_0
+  - openssl=1.1.1l=h7f8727e_0
   - ossuuid=1.6.2=hf484d3e_1000
   - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.3.1=py39hde0f152_0
@@ -236,4 +236,4 @@ dependencies:
   - zipp=3.5.0=pyhd8ed1ab_0
   - zlib=1.2.11=h516909a_1010
   - zstd=1.5.0=ha95c52a_0
-prefix: /home/531734/.conda/envs/karyonplot
+prefix: /home/mike/miniconda3/envs/appraisal/envs/karyonplot
