--- a/config_local.yaml
+++ b/config_local.yaml
@@ -4,10 +4,10 @@ reads: "all_hifi"   # name of reads, located in data/reads/
 redundans_path: "/home/mike/software/redundans"  # path to directory containing redundans script
 gatk_path: "~/software/gatk-4.2.3.0"
 picard-tools: ~/software/picard/"  # path to picard-tools
-memory: "100"  # the available memory for the analysis in gigabytes
-threads: "20"
+memory: "20"  # the available memory for the analysis in gigabytes
+threads: "4"
 quast_path: "~/software/quast"
-ncbi_nt_path: "~/databases/ncbi_db"
+ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
 seq_tech: "hifi"
 reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
 karyon_path: "~/software/karyon/bin"
