--- a/config_local.yaml
+++ b/config_local.yaml
@@ -11,3 +11,4 @@ ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
 seq_tech: "hifi"
 reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
 karyon_path: "~/software/karyon/bin"
+changes_for_git: "nothing"
