--- a/config_local.yaml
+++ b/config_local.yaml
@@ -1,14 +1,9 @@
-full_path: "/media/mike/WD_4TB/asmapp/"
-assembly: "FINALFINAL"  # name of starting assembly, located in data/assemblies/
-reads: "all_hifi"   # name of reads, located in data/reads/
-redundans_path: "/home/mike/software/redundans"  # path to directory containing redundans script
-gatk_path: "~/software/gatk-4.2.6.1"
-picard-tools: ~/software/picard/"  # path to picard-tools
+full_path: "/media/mike/WD_4TB/asmapp/"  # full path to where you cloned asmapp
+assembly: "FINALFINAL"  # name of starting assembly, located in data/assemblies/. remove the suffix. needs to be a .fasta
+reads: "all_hifi"   # name of reads, located in data/reads/. remove the sufffix. needs to be .fastq.gz format
 memory: "12"  # the available memory for the analysis in gigabytes
-threads: "8"
-quast_path: "~/software/quast"
-ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
-seq_tech: "hifi"
-reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
-karyon_path: "~/software/karyon/bin"
-changes_for_git: "nothing"
+threads: "8"  # available threads
+quast_path: "~/software/quast"  # path to where you cloned quast
+ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"  # path to where you have a blast nt database installed
+seq_tech: "hifi"  # type of sequencing technology
+reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"  # path to the reference genome file. remove the suffix.
