--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,17 @@
-full_path: ""
-assembly: ""  # name of starting assembly, located in data/aassemblies/
-reads: ""   # name of reads, located in data/reads/
-redundans_path: ""  # path to directory containing redundans script
+# file paths
+full_path: ""  # the full path to the asmapp directory
+assembly: ""  # filename of assembly, no suffix, located in data/assemblies/
+reads: ""   # name of reads file, located in data/reads/. no suffixes
+reference: ""  # filename of reference nuclear assembly, no suffix, located in data/assemblies/
+mitochondrial: ""  # filename of reference mitochondrial assembly, no suffix, located in data/assemblies/
+
+# hardware
 memory: ""  # the available memory for the analysis in gigabytes
-threads: ""
-quast_path: ""
-ncbi_nt_path: ""
-seq_tech: ""
-reference: ""
+threads: ""  # the amount of threads available to asmapp
+
+# dependency paths
+quast_path: ""  # the path to where QUAST was installed
+ncbi_nt_path: ""  # the path to where the NCBI nt database is
+
+# parameters
+seq_tech: ""  # the sequencing technology used to generate the reads. eg, hifi, nanopore
