added to dev environment

--- a/envs/asmapp_dev.yaml
+++ b/envs/asmapp_dev.yaml
@@ -4,8 +4,10 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - biopython
   - blast
   - blobtools
+  - gnuplot
   - jupyter_core
   - mash
   - matplotlib
