--- a/config_local.yaml
+++ b/config_local.yaml
@@ -7,4 +7,4 @@ quast_path: "~/software/quast"
 ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
 seq_tech: "hifi"
 reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
-mitochondrial: "data/assemblies/mitoref.fasta"
+mitochondrial: "data/assemblies/mitoref"
