Edits to genomescope rules

--- a/config_local.yaml
+++ b/config_local.yaml
@@ -8,3 +8,4 @@ ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
 seq_tech: "hifi"
 reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
 mitochondrial: "data/assemblies/mitoref"
+ploidy: "4"
