added refs to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,4 @@ nav:
         - 'Use cases': 'user-guide/use-cases.md'
     - About:
         - 'License': 'license.md'
+        - 'References': 'references.md'
