--- a/config_local.yaml
+++ b/config_local.yaml
@@ -1,11 +1,11 @@
-full_path: "/media/mike/WD_4TB/asmapp/"
-assembly: "FINALFINAL"  # name of starting assembly, located in data/aassemblies/
-reads: "all_hifi"   # name of reads, located in data/reads/
+full_path: "/mnt/c/Users/Mike/Documents/coding/asmapp/"
+assembly: "Msporidia"  # name of starting assembly, located in data/aassemblies/
+reads: "Msporidia_reads"   # name of reads, located in data/reads/
 # memory: "30"  # the available memory for the analysis in gigabytes
 threads: "8"
 quast_path: "~/software/quast"
 ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
 seq_tech: "hifi"
-reference: "data/assemblies/Blanc_Mathieu_2017_mJavanica"
+reference: "data/assemblies/Msporidia"
 mitochondrial: "data/assemblies/mitoref"
-ploidy: "4"
+ploidy: "1"
