--- a/envs/asmapp.yaml
+++ b/envs/asmapp.yaml
@@ -1,4 +1,4 @@
-name: appraisal
+name: asmapp
 channels:
   - conda-forge
   - bioconda
@@ -254,6 +254,7 @@ dependencies:
   - pytz=2022.2.1=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pyyaml=6.0=py310h5764c6d_4
+  - quast
   - qt-main=5.15.4=ha5833f6_2
   - ratelimiter=1.2.0=py_1002
   - re2=2022.06.01=h27087fc_0
