--- a/envs/asmapp.yaml
+++ b/envs/asmapp.yaml
@@ -263,6 +263,7 @@ dependencies:
   - retry=0.9.2=py_0
   - rich=12.5.1=pyhd8ed1ab_0
   - rsa=4.9=pyhd8ed1ab_0
+  - samtools
   - s3transfer=0.6.0=pyhd8ed1ab_0
   - seqkit=2.3.0=h9ee0642_0
   - setuptools=65.3.0=py310hff52083_0
