--- a/config_local.yaml
+++ b/config_local.yaml
@@ -1,11 +1,10 @@
-full_path: "/mnt/c/Users/Mike/Documents/coding/asmapp/"
+full_path: "/mnt/f/asmapp/"
 assembly: "Msporidia"  # name of starting assembly, located in data/aassemblies/
 reads: "Msporidia_reads"   # name of reads, located in data/reads/
 # memory: "30"  # the available memory for the analysis in gigabytes
 threads: "8"
-quast_path: "~/software/quast"
-ncbi_nt_path: "/media/mike/SB_2TB/databases/ncbi_db/nt"
-seq_tech: "hifi"
+ncbi_nt_path: "/mnt/f/databases/blast/"
+seq_tech: "pb"
 reference: "data/assemblies/Msporidia"
-mitochondrial: "data/assemblies/mitoref"
+mitochondrial: "data/assemblies/mito"
 ploidy: "1"
